# termlink

./: Cargo.toml  README.md  README_zh.md  build.rs
src/: i18n.rs  main.rs
src/app/: mod.rs  ui.rs
src/config/: mod.rs  settings.rs
src/sftp/: manager.rs  mod.rs
src/ssh/: client.rs  manager.rs  mod.rs  session.rs
src/terminal/: buffer.rs  emulator.rs  mod.rs  renderer.rs  selection.rs  theme.rs  wezterm_adapter.rs
src/utils/: helpers.rs  mod.rs
